# ml-site

./: .gitignore  Home.py  README.md  main.py  pyproject.toml
pages/: 1_Chatbot.py  2_RAG.py  3_Functions.py  3_Ollama.py  3_Ollama_API.py  4_Ollama_CLl.py  4_Ollama_Cl.py  5_Functions.py  6_Tools.py  7_Gemini.py  8_Genai.py
